@@ -149,7 +149,13 @@ bool AbstractCommand::execute() {
 	  if(_segments.empty()) {
 	    // TODO socket could be pooled here if pipelining is enabled...
 	    logger->info(MSG_NO_SEGMENT_AVAILABLE, cuid);
-	    return prepareForRetry(1);
+	    // When all segments are ignored in SegmentMan, there are
+	    // no URIs available, so don't retry.
+	    if(_requestGroup->getSegmentMan()->allSegmentsIgnored()) {
+	      return true;
+	    } else {
+	      return prepareForRetry(1);
+	    }
 	  }
 	} else {
 	  size_t maxSegments = req->getMaxPipelinedRequest();
