@@ -1,3 +1,13 @@
+2009-07-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Don't call prepareForRetry(1) if all segments are ignored in
+	SegmentMan.
+	* src/AbstractCommand.cc
+	* src/BitfieldMan.cc
+	* src/BitfieldMan.h
+	* src/SegmentMan.cc
+	* src/SegmentMan.h
+
 2009-07-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Removed FileEntry::getAssociatedUris()
